Added MinIO + some fixes

--- a/JWTAuthTemplate/appsettings.json
+++ b/JWTAuthTemplate/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=JWTAuthTemplate;Username=postgres;Password=root"
   },
+  "MinioSettings": {
+    "Endpoint": "localhost:9000",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
