--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.4'
 services:
   db:
     image: postgres
+    container_name: postgre
     restart: always
     environment:
         POSTGRES_USER: postgres
@@ -10,6 +11,19 @@ services:
         POSTGRES_DB: JWTAuthTemplate
     ports:
       - "5432:5432"
+  
+  minio:
+    image: minio/minio:RELEASE.2024-01-18T22-51-28Z-cpuv1
+    container_name: minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
 
   jwtauthtemplate:
     image: ${DOCKER_REGISTRY-}jwtauthtemplate
@@ -28,3 +42,6 @@ services:
     ports:
         - "5505:80" 
         - "5506:443"
+
+volumes:
+  minio_data:
